[gd_scene load_steps=12 format=3 uid="uid://cv3fuwl41kjfj"]

[ext_resource type="Script" path="res://game.gd" id="1_xdg2r"]
[ext_resource type="PackedScene" uid="uid://dkn7tgvukkkb7" path="res://Systems/Temperature.tscn" id="2_gyg1i"]
[ext_resource type="Texture2D" uid="uid://byibrc5t7snit" path="res://Textures/Dashboard/dashboard.png" id="2_o1l3i"]
[ext_resource type="PackedScene" uid="uid://bs67uy4k582ui" path="res://Systems/SimonSays.tscn" id="3_hoitp"]
[ext_resource type="PackedScene" uid="uid://p2rn7wc63tvx" path="res://Systems/LightCount.tscn" id="5_r4b4w"]
[ext_resource type="PackedScene" uid="uid://dsyumoi74ucds" path="res://Textbox/Textbox.tscn" id="6_773w3"]
[ext_resource type="AudioStream" uid="uid://bk3odu41o7x3q" path="res://Sounds/bgm2.mp3" id="7_3qwxn"]
[ext_resource type="PackedScene" uid="uid://d1fum4e6ysch1" path="res://Systems/Wavefinder.tscn" id="7_e4k80"]
[ext_resource type="AudioStream" uid="uid://d1x5ao5moqm1b" path="res://Sounds/distant_explosion.mp3" id="10_ldj6j"]

[sub_resource type="Gradient" id="Gradient_f2kdm"]
offsets = PackedFloat32Array(0, 0.00649351, 0.181818, 0.909091)
colors = PackedColorArray(0, 0, 0, 1, 0.214286, 0.214286, 0.214286, 1, 0.470238, 0.470238, 0.470238, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nl2fw"]
gradient = SubResource("Gradient_f2kdm")
fill_from = Vector2(1, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_xdg2r")

[node name="AlignmentBackground" type="Sprite2D" parent="."]
position = Vector2(577, 329)
scale = Vector2(1.81992, 1.85139)
texture = ExtResource("2_o1l3i")

[node name="SimonSays" parent="." instance=ExtResource("3_hoitp")]

[node name="Wavefinder" parent="." instance=ExtResource("7_e4k80")]

[node name="LightCount" parent="." instance=ExtResource("5_r4b4w")]

[node name="Textbox" parent="." instance=ExtResource("6_773w3")]
visible = false

[node name="Temperature" parent="." instance=ExtResource("2_gyg1i")]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BackgroundAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3qwxn")
volume_db = 8.165
autoplay = true
attenuation = 1.51571

[node name="Tint" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0)
position = Vector2(566, 333.5)
scale = Vector2(19.4063, 11.2969)
texture = SubResource("GradientTexture2D_nl2fw")

[node name="FailureTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="FailureAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_ldj6j")
volume_db = 8.0
pitch_scale = 1.5
attenuation = 4.75688

[connection signal="won_game" from="SimonSays" to="." method="_next_line"]
[connection signal="won_game" from="Wavefinder" to="." method="_next_line"]
[connection signal="won_game" from="LightCount" to="." method="_next_line"]
[connection signal="game_over" from="Temperature" to="." method="_on_temperature_game_over"]
[connection signal="lever_grabbed" from="Temperature" to="Wavefinder" method="_start_rumbling"]
[connection signal="lever_released" from="Temperature" to="Wavefinder" method="_stop_rumbling"]
[connection signal="timeout" from="Timer" to="." method="_next_line"]
[connection signal="timeout" from="FailureTimer" to="." method="_on_failure_timer_timeout"]
